log
Sun 28 Apr 2024 12:22:07 AM UTC: 
 tests:  0|6
total_score: 0/70
e45cc6f
Sun 28 Apr 2024 12:24:16 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
31a159a
Sun 28 Apr 2024 12:25:31 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
b7c3e61
Sun 28 Apr 2024 12:34:19 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:53: error: expected ‘)’ before ‘{’ token
   77 |         if(is_equal(map->buckets[posicion]->key,key){
      |           ~                                         ^
      |                                                     )
hashmap.c:84:5: error: expected expression before ‘}’ token
   84 |     }
      |     ^
Compilation failed
d006e98
Sun 28 Apr 2024 12:35:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
328c679
Sun 28 Apr 2024 12:39:03 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
92b28cc
Sun 28 Apr 2024 12:40:58 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:109:10: error: statement with no effect [-Werror=unused-value]
  109 |       map->current;
      |       ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4dace6f
Sun 28 Apr 2024 12:41:49 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
fd264f4
Sun 28 Apr 2024 12:43:20 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
981a63e
